gcc/testsuite/rust/rustc/ui/pattern/issue-74702.rs
fn main() {
    let (foo @ ..,) = (0, 0);
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
    dbg!(foo);
}

